25-istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ifconfig-external
  namespace: ifconfig
  labels:
    app: ifconfig
    app.kubernetes.io/name: ifconfig
    app.kubernetes.io/instance: ifconfig-stg
spec:
  gateways:
    - ifconfig-gateway
  hosts:
    - 'ifconfig.mesh.stg.stg.ethos.usw2.ctv.gg'
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: ifconfig.ifconfig.svc.cluster.local
            port:
              number: 8080
